# rhesis

./: .gitignore  .qmlls.ini  CMakeLists.txt  Cargo.toml  README.md  build-flatpak.sh  build.rs  cargo-sources.json  org.dimkar.rhesis.desktop  org.dimkar.rhesis.json  org.kde.rhesis.desktop  requirements.txt  resources.qrc  rust-analyzer.toml  setup.sh
.cargo/: config.toml
.github/workflows/: build-flatpak.yml
icons/hicolor/: index.theme
src/: bridge.rs  main.rs
src/cpp/: helper.h
src/interop/: async_helper.rs  async_messaging_helper.rs  bridge.rs  custom_highlighter.rs  mod.rs
src/interop/cpp/: helper.h
src/interop/qml/: Main.qml  MainPage.qml  Root.qml  SecondPage.qml  SettingsPage.qml
src/languatool/: client.rs  service.rs
src/qml/: Main.qml
src/ui/: bridge.rs
src/ui/cpp/: helper.h
src/ui/qml/: Main.qml
