[package]
name = "rhesis"
version = "0.1.0"
authors = [ "Dimkar <notmyemail@gmail.com>" ]
edition = "2021"
license = "MIT"

[dependencies]
cxx = "1.0.95"
cxx-qt = "0.8"
cxx-qt-lib = { version="0.8", features = ["qt_full"] }
cxx-qt-lib-extras = "0.8"

[build-dependencies]
# The link_qt_object_files feature is required for statically linking Qt 6.
cxx-qt-build = { version = "0.8", features = [ "link_qt_object_files" ] }
