[package]
name = "rhesis"
version = "0.1.0"
authors = [ "Dimkar <notmyemail@gmail.com>" ]
edition = "2021"
license = "MIT"

[dependencies]
cxx = "1.0.176"
cxx-qt = { git = "https://github.com/KDAB/cxx-qt.git" }
cxx-qt-lib = { git = "https://github.com/KDAB/cxx-qt.git", features = ["qt_full"] }
cxx-qt-lib-extras = { git = "https://github.com/KDAB/cxx-qt.git" }
lazy_static = "1.5.0"
reqwest = { version = "0.13.4", features = ["json", "form"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }

[build-dependencies]
# The link_qt_object_files feature is required for statically linking Qt 6.
cxx-qt-build = { git = "https://github.com/KDAB/cxx-qt.git", features = [ "link_qt_object_files" ] }
